--- a/templates/deploy.html
+++ b/templates/deploy.html
@@ -151,7 +151,7 @@
                 {% if 'revoking' in model.deployStatus %}
 
                   <div class="form-check form-switch" >
-                    <input class="form-check-input" type="checkbox" id="deployRevoke_switch_{{model.id}}" formaction="/pipeline/deploy" data-deploystatus="{{model.deployStatus}}" data-modelname="{{model.modelName}}"  onchange="changingStatus(this.id)">
+                    <input class="form-check-input" type="checkbox" id="deployRevoke_switch_{{model.id}}" formaction="/pipeline/deploy" data-deploystatus="{{model.deployStatus}}" data-modelid="{{model.id}}"  onchange="changingStatus(this.id)">
 
                   </div>
 
@@ -160,7 +160,7 @@
                 {% if 'deploying' in model.deployStatus %}
 
                   <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="deployRevoke_switch_{{model.id}}" formaction="/pipeline/deploy" data-deploystatus="{{model.deployStatus}}" data-modelname="{{model.modelName}}" onchange="changingStatus(this.id)" checked="">
+                    <input class="form-check-input" type="checkbox" id="deployRevoke_switch_{{model.id}}" formaction="/pipeline/deploy" data-deploystatus="{{model.deployStatus}}" data-modelid="{{model.id}}" onchange="changingStatus(this.id)" checked="">
                     <label class="form-check-label" for="deployRevoke_switch"></label>
                   </div>
 
@@ -175,11 +175,11 @@
                 <td>{{model.serviceUrl}}</td>
               </tr>
               {% endfor %}
-              
+
             </tbody>
           </table>
 
-          <input type="text" class="form-control" id="modelPklFile-id" name="modelPklFile" value="" hidden>
+          <input type="text" class="form-control" id="model_id" name="modelId" value="" hidden>
 
 
 
