js 邏輯修正 狀態互換

--- a/templates/deploy.html
+++ b/templates/deploy.html
@@ -180,6 +180,8 @@
           </table>
 
           <input type="text" class="form-control" id="model_id" name="modelId" value="" hidden>
+          <input type="text" class="form-control" id="deployStatus_id" name="deployStatus" value="" hidden>
+
 
 
 
