--- a/templates/service.html
+++ b/templates/service.html
@@ -136,7 +136,7 @@
       <div class="p-5 mb-1 bg-light rounded-3">
         <div class="container-fluid py-0">
           <h1 class="display-6 fw-bold">Service</h1>
-          <p class="col-md-8 fs-5">Get a result by Predict APIs.</p>
+          <p class="col-md-8 fs-5">Examine the training record and testing result by Predict APIs.</p>
 
           <br><br>
 
