--- a/templates/platform.html
+++ b/templates/platform.html
@@ -123,8 +123,8 @@
 
         <div class="col-md-6">
 
-          <div class="p-5 mb-4 bg-light rounded-3">
-            <div class="container-fluid py-5">
+          <div class="p-5 mb-4 bg-dark rounded-3">
+            <div class="container-fluid text-white bg-dark py-5">
               <h1 class="display-5 fw-bold">Deploy</h1>
               <p class="col-md-8 fs-4">Deploy your model.</p>
               <button class="btn btn-primary btn-lg" type="button"
