--- a/templates/model_scenario_SLFN.html
+++ b/templates/model_scenario_SLFN.html
@@ -153,12 +153,12 @@
                     <div class="col-md-12">
             <div class="h-100 p-5 bg-light border rounded-3">
 
-              <label class="col-md-8 fs-4">SLFN(Two Layer).</label>
+              <label class="col-md-8 fs-4">SLFN(Single-hidden layer feedforward neural network).</label>
               <label class="col-md-8 fs-5">For training</label>
 
               <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="floatingInput" placeholder="10" name="hiddenNode">
-                <label for="floatingInput">Hidden node</label>
+                <label for="floatingInput">Hidden layer node</label>
               </div>
 
               <div class="form-floating mb-3">
