將 Initializing, Selecting 設定為預設 Module : 另可支援Cramming, Reorganizing module 的任意選用

--- a/templates/model.html
+++ b/templates/model.html
@@ -122,7 +122,7 @@
 
     <br>
 
-    <div class="row align-items-md-stretch">
+    <!-- <div class="row align-items-md-stretch">
       <div class="col-md-6">
         <div class="h-100 p-5 text-white bg-dark rounded-3">
           <h2>Scenario 1</h2>
@@ -132,14 +132,14 @@
           
         </div>
       </div>
-      <!-- <div class="col-md-6">
+      <div class="col-md-6">
         <div class="h-100 p-5 bg-light border rounded-3">
           <h2>Scenario 2</h2>
           <p>Define your own model and train.</p>
           <button class="btn btn-outline-secondary" type="button" onclick="window.location.href='/pipeline/model/scenario/2';">Try it!</button>
         </div>
-      </div> -->
-    </div>
+      </div>
+    </div> -->
 
     <footer class="pt-3 mt-4 text-muted border-top">
       © 2022
