--- a/templates/deploy.html
+++ b/templates/deploy.html
@@ -13,8 +13,8 @@
     
 
     
-
-<link href="{{ url_for('static', path='/css/styles.css') }}" rel="stylesheet" crossorigin="anonymous">
+  <!-- <link href="{{ url_for('static', path='/css/styles.css') }}" rel="stylesheet" crossorigin="anonymous"> -->
+  <link href="/static/css/styles.css" rel="stylesheet" crossorigin="anonymous">
 
     <!-- Favicons -->
 <link rel="apple-touch-icon" href="https://getbootstrap.com/docs/5.2/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
@@ -104,7 +104,8 @@
     </style>
 
 
-    <script type="text/javascript" src="{{ url_for('static', path='/js/script_deploy.js') }}"></script>
+    <!-- <script type="text/javascript" src="{{ url_for('static', path='/js/script_deploy.js') }}"></script> -->
+    <script type="text/javascript" src="/static/js/script_deploy.js"></script>
 
     
   </head>
