--- a/templates/data.html
+++ b/templates/data.html
@@ -1,224 +1,249 @@
 <!DOCTYPE html>
 <!-- saved from url=(0053)https://getbootstrap.com/docs/5.2/examples/jumbotron/ -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.98.0">
-    <title>Jumbotron example · Bootstrap v5.2</title>
+<html lang="en">
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/jumbotron/">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    
-<link href="{{ url_for('static', path='/css/styles.css') }}" rel="stylesheet"  crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+  <meta name="generator" content="Hugo 0.98.0">
+  <title>Jumbotron example · Bootstrap v5.2</title>
 
-    <!-- Favicons -->
-<link rel="apple-touch-icon" href="https://getbootstrap.com/docs/5.2/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-<link rel="icon" href="https://getbootstrap.com/docs/5.2/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-<link rel="icon" href="https://getbootstrap.com/docs/5.2/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-<link rel="manifest" href="https://getbootstrap.com/docs/5.2/assets/img/favicons/manifest.json">
-<link rel="mask-icon" href="https://getbootstrap.com/docs/5.2/assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
-<link rel="icon" href="https://getbootstrap.com/docs/5.2/assets/img/favicons/favicon.ico">
-<meta name="theme-color" content="#712cf9">
+  <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/jumbotron/">
 
 
-    <style>
-      
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
+  <!-- <link href="{{ url_for('static', path='/css/styles.css') }}" rel="stylesheet" crossorigin="anonymous"> -->
+  <link href="/static/css/styles.css" rel="stylesheet" crossorigin="anonymous">
+
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" href="https://getbootstrap.com/docs/5.2/assets/img/favicons/apple-touch-icon.png"
+    sizes="180x180">
+  <link rel="icon" href="https://getbootstrap.com/docs/5.2/assets/img/favicons/favicon-32x32.png" sizes="32x32"
+    type="image/png">
+  <link rel="icon" href="https://getbootstrap.com/docs/5.2/assets/img/favicons/favicon-16x16.png" sizes="16x16"
+    type="image/png">
+  <link rel="manifest" href="https://getbootstrap.com/docs/5.2/assets/img/favicons/manifest.json">
+  <link rel="mask-icon" href="https://getbootstrap.com/docs/5.2/assets/img/favicons/safari-pinned-tab.svg"
+    color="#712cf9">
+  <link rel="icon" href="https://getbootstrap.com/docs/5.2/assets/img/favicons/favicon.ico">
+  <meta name="theme-color" content="#712cf9">
+
+
+  <style>
+    .bd-placeholder-img {
+      font-size: 1.125rem;
+      text-anchor: middle;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      user-select: none;
+    }
+
+    @media (min-width: 768px) {
+      .bd-placeholder-img-lg {
+        font-size: 3.5rem;
       }
+    }
 
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
+    .b-example-divider {
+      height: 3rem;
+      background-color: rgba(0, 0, 0, .1);
+      border: solid rgba(0, 0, 0, .15);
+      border-width: 1px 0;
+      box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+    }
 
-      .b-example-divider {
-        height: 3rem;
-        background-color: rgba(0, 0, 0, .1);
-        border: solid rgba(0, 0, 0, .15);
-        border-width: 1px 0;
-        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-      }
+    .b-example-vr {
+      flex-shrink: 0;
+      width: 1.5rem;
+      height: 100vh;
+    }
 
-      .b-example-vr {
-        flex-shrink: 0;
-        width: 1.5rem;
-        height: 100vh;
-      }
+    .bi {
+      vertical-align: -.125em;
+      fill: currentColor;
+    }
 
-      .bi {
-        vertical-align: -.125em;
-        fill: currentColor;
-      }
+    .nav-scroller {
+      position: relative;
+      z-index: 2;
+      height: 2.75rem;
+      overflow-y: hidden;
+    }
 
-      .nav-scroller {
-        position: relative;
-        z-index: 2;
-        height: 2.75rem;
-        overflow-y: hidden;
-      }
-
-      .nav-scroller .nav {
-        display: flex;
-        flex-wrap: nowrap;
-        padding-bottom: 1rem;
-        margin-top: -1px;
-        overflow-x: auto;
-        text-align: center;
-        white-space: nowrap;
-        -webkit-overflow-scrolling: touch;
-      }
-    </style>
-
-  <script type="text/javascript" src="{{ url_for('static', path='/js/script_data.js') }}"></script>
-    
-  </head>
-  <body>
-    
-
-    
-<main>
-  <div class="container py-4">
-    <header class="pb-3 mb-4 border-bottom">
-      <a href='./platform' class="d-flex align-items-center text-dark text-decoration-none">
-        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="me-2" viewBox="0 0 118 94" role="img"><title>Bootstrap</title><path fill-rule="evenodd" clip-rule="evenodd" d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z" fill="currentColor"></path></svg>
-        <span class="fs-4">A Platform </span>
-      </a>
-    </header>
+    .nav-scroller .nav {
+      display: flex;
+      flex-wrap: nowrap;
+      padding-bottom: 1rem;
+      margin-top: -1px;
+      overflow-x: auto;
+      text-align: center;
+      white-space: nowrap;
+      -webkit-overflow-scrolling: touch;
+    }
+  </style>
 
 
-    <div class="p-5 mb-1 bg-light rounded-3">
-      <div class="container-fluid py-0">
-        <h1 class="display-6 fw-bold">Data Upload</h1>
-        <p class="col-md-8 fs-5">Upload data.</p>
-        <br><br>
-         <form action="/pipeline/data" method="post" enctype="multipart/form-data">
+  <!-- <script type="text/javascript" src="{{ url_for('static', path='/js/script_deploy.js') }}"></script> -->
+  <script type="text/javascript" src="/static/js/script_data.js"></script>
 
-          <div class="col-md-12">
-            <div class="h-100 p-5 bg-light border rounded-3">
+</head>
 
-              <label class="col-md-8 fs-4"><b>Supported Data format : CSV (Comma-Separated Values) E.g., </b></label>
+<body>
 
-              <div class="row align-items-md-stretch">
 
-                <div class="col-md-6">
-                  <div class="h-100 p-5 bg-light  rounded-3">
-                    <h2>X: </h2>
-                    <img src="{{ url_for('static', path='/img/csv_eg_x.png') }}"  alt="data format supported" width="450" height="200" style="display:block;" >
-                  </div>
-                </div>
-                
-                <div class="col-md-6">
-                  <div class="h-100 p-5 bg-light  rounded-3">
-                    <h2>Y: </h2>
-                    <img src="{{ url_for('static', path='/img/csv_eg_y.png') }}"  alt="data format supported" width="100" height="200" style="display:block;" >
-                  </div>
-                </div>
-                
-              </div>
 
-            </div>
-          </div>
+  <main>
+    <div class="container py-4">
+      <header class="pb-3 mb-4 border-bottom">
+        <a href='./platform' class="d-flex align-items-center text-dark text-decoration-none">
+          <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="me-2" viewBox="0 0 118 94" role="img">
+            <title>Bootstrap</title>
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z"
+              fill="currentColor"></path>
+          </svg>
+          <span class="fs-4">A Platform </span>
+        </a>
+      </header>
 
-          <br>
 
-          <div class="row">
+      <div class="p-5 mb-1 bg-light rounded-3">
+        <div class="container-fluid py-0">
+          <h1 class="display-6 fw-bold">Data Upload</h1>
+          <p class="col-md-8 fs-5">Upload data.</p>
+          <br><br>
+          <form action="/pipeline/data" method="post" enctype="multipart/form-data">
+
             <div class="col-md-12">
+              <div class="h-100 p-5 bg-light border rounded-3">
+
+                <label class="col-md-8 fs-4"><b>Supported Data format : CSV (Comma-Separated Values) E.g., </b></label>
+
+                <div class="row align-items-md-stretch">
+
+                  <div class="col-md-6">
+                    <div class="h-100 p-5 bg-light  rounded-3">
+                      <h2>X: </h2>
+                      <!-- <img src="{{ url_for('static', path='/img/csv_eg_x.png') }}" alt="data format supported"
+                        width="450" height="200" style="display:block;"> -->
+                      <img src="/static/img/csv_eg_x.png" alt="data format supported"
+                        width="450" height="200" style="display:block;">
+                    </div>
+                  </div>
+
+                  <div class="col-md-6">
+                    <div class="h-100 p-5 bg-light  rounded-3">
+                      <h2>Y: </h2>
+                      <!-- <img src="{{ url_for('static', path='/img/csv_eg_y.png') }}" alt="data format supported"
+                        width="100" height="200" style="display:block;"> -->
+                      <img src="/static/img/csv_eg_y.png" alt="data format supported"
+                        width="450" height="200" style="display:block;">
+                    </div>
+                  </div>
+
+                </div>
+
+              </div>
+            </div>
+
+            <br>
+
+            <div class="row">
+              <div class="col-md-12">
                 <div class="h-100 p-5 bg-light border rounded-3">
-                  
+
                   <label class="col-md-8 fs-4">Select the use of data.</label>
 
                   <div class="form-floating mb-3">
-                    <select class="form-control" id="select_dataUse" placeholder="10" name="dataUse" method="GET"  style="font-size:20px;" onchange="createOrSelect()"> 
-                      <option value= "Train" SELECTED>Train</option>
-                      <option value= "Test" >Test</option>
+                    <select class="form-control" id="select_dataUse" placeholder="10" name="dataUse" method="GET"
+                      style="font-size:20px;" onchange="createOrSelect()">
+                      <option value="Train" SELECTED>Train</option>
+                      <option value="Test">Test</option>
                     </select>
                     <label for="select_dataUse">Data directory</label>
                   </div>
 
                 </div>
+              </div>
             </div>
-          </div>
 
-          <br>
+            <br>
 
-          <div class="row" id="selectDirectory" style="display:none">
-            <div class="col-md-12">
+            <div class="row" id="selectDirectory" style="display:none">
+              <div class="col-md-12">
                 <div class="h-100 p-5 bg-light border rounded-3">
-                  
+
                   <label class="col-md-8 fs-4">Select existed Data directory.</label>
 
                   <div class="form-floating mb-3">
-                    <select class="form-control" id="select_existedDirectory" placeholder="10" name="existedDirectory" method="GET"  style="font-size:20px;"> 
+                    <select class="form-control" id="select_existedDirectory" placeholder="10" name="existedDirectory"
+                      method="GET" style="font-size:20px;">
                       {% for dataDir in upload_data %}
-                      <option value= "{{dataDir}}" SELECTED>{{dataDir}}</option>"
+                      <option value="{{dataDir}}" SELECTED>{{dataDir}}</option>"
                       {% endfor %}
                     </select>
                     <label for="select_existedDirectory">Data directory</label>
                   </div>
 
                 </div>
-            </div>
-          </div>
-
-
-
-          <div class="col-md-12" id="createDirectory" style="display:block">
-            <div class="h-100 p-5 bg-light border rounded-3">
-              <label class="col-md-8 fs-4">Create a directory to save files uploaded.</label>
-              <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="floatingInput" placeholder="10" name="newDirectory">
-                <label for="floatingInput">New directory</label>
               </div>
             </div>
-          </div>
-              <br>
-          <div class="col-md-12">
-            <div class="h-100 p-5 bg-light border rounded-3">
 
-              <label class="col-md-8 fs-4">Choose x attributes file in the csv format from local directory.</label>
-              <label for="data_x" class="btn btn-outline-primary btn-lg">Choose</label>
-              <input type="file" id="data_x" name="file_x" hidden >
-              <br>
-              <text>Current x attributes file : <font color="blue"><b>{{filename_x}}</b></font></text>
-              <br><br>
-              <label class="col-md-8 fs-4">Choose y attributes file in the csv format from local directory.</label>
-              <label for="data_y" class="btn btn-outline-primary btn-lg">Choose</label>
-              <input type="file" id="data_y" name="file_y" hidden >
-              <br>
-              <text>Current y attributes file : <font color="blue"><b>{{filename_y}}</b></font></text>
-            </div>
-          </div>
-          <br>
-          <div class="col-md-12">
-            <div class="h-100 p-5 bg-light border rounded-3">
-              <label class="col-md-8 fs-4">Upload file to Server</label>
-              <label for="save_data" class="btn btn-outline-primary btn-lg">Upload</label>
-              <input type="submit" id="save_data" class="btn btn-outline-primary btn-lg" hidden>
-              <br>
-              <text>Save file  to Server in <font color="blue"><b>{{directory}}</b></font> directory.</text>
-            </div>
-          </div>
-       </form>
 
+
+            <div class="col-md-12" id="createDirectory" style="display:block">
+              <div class="h-100 p-5 bg-light border rounded-3">
+                <label class="col-md-8 fs-4">Create a directory to save files uploaded.</label>
+                <div class="form-floating mb-3">
+                  <input type="text" class="form-control" id="floatingInput" placeholder="10" name="newDirectory">
+                  <label for="floatingInput">New directory</label>
+                </div>
+              </div>
+            </div>
+            <br>
+            <div class="col-md-12">
+              <div class="h-100 p-5 bg-light border rounded-3">
+
+                <label class="col-md-8 fs-4">Choose x attributes file in the csv format from local directory.</label>
+                <label for="data_x" class="btn btn-outline-primary btn-lg">Choose</label>
+                <input type="file" id="data_x" name="file_x" hidden>
+                <br>
+                <text>Current x attributes file : <font color="blue"><b>{{filename_x}}</b></font></text>
+                <br><br>
+                <label class="col-md-8 fs-4">Choose y attributes file in the csv format from local directory.</label>
+                <label for="data_y" class="btn btn-outline-primary btn-lg">Choose</label>
+                <input type="file" id="data_y" name="file_y" hidden>
+                <br>
+                <text>Current y attributes file : <font color="blue"><b>{{filename_y}}</b></font></text>
+              </div>
+            </div>
+            <br>
+            <div class="col-md-12">
+              <div class="h-100 p-5 bg-light border rounded-3">
+                <label class="col-md-8 fs-4">Upload file to Server</label>
+                <label for="save_data" class="btn btn-outline-primary btn-lg">Upload</label>
+                <input type="submit" id="save_data" class="btn btn-outline-primary btn-lg" hidden>
+                <br>
+                <text>Save file to Server in <font color="blue"><b>{{directory}}</b></font> directory.</text>
+              </div>
+            </div>
+          </form>
+
+        </div>
       </div>
+
+      <footer class="pt-3 mt-4 text-muted border-top">
+        © 2022
+      </footer>
     </div>
-
-    <footer class="pt-3 mt-4 text-muted border-top">
-      © 2022
-    </footer>
-  </div>
-</main>
+  </main>
 
 
-    
-  
 
-</body></html>
+
+
+</body>
+
+</html>
