--- a/templates/model_scenario_ASLFN.html
+++ b/templates/model_scenario_ASLFN.html
@@ -15,7 +15,8 @@
 
 
 
-  <link href="{{ url_for('static', path='/css/styles.css') }}" rel="stylesheet" crossorigin="anonymous">
+  <!-- <link href="{{ url_for('static', path='/css/styles.css') }}" rel="stylesheet" crossorigin="anonymous"> -->
+  <link href="/static/css/styles.css" rel="stylesheet" crossorigin="anonymous">
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" href="https://getbootstrap.com/docs/5.2/assets/img/favicons/apple-touch-icon.png"
@@ -114,7 +115,9 @@
   <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
 
-  <script type="text/javascript" src="{{ url_for('static', path='/js/script_model_2.js') }}"></script>
+
+  <!-- <script type="text/javascript" src="{{ url_for('static', path='/js/script_deploy.js') }}"></script> -->
+  <script type="text/javascript" src="/static/js/script_model_2.js"></script>
 
 </head>
 
