--- a/templates/service.html
+++ b/templates/service.html
@@ -16,8 +16,8 @@
 
 
 
-
-  <link href="{{ url_for('static', path='/css/styles.css') }}" rel="stylesheet" crossorigin="anonymous">
+  <!-- <link href="{{ url_for('static', path='/css/styles.css') }}" rel="stylesheet" crossorigin="anonymous"> -->
+  <link href="/static/css/styles.css" rel="stylesheet" crossorigin="anonymous">
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" href="https://getbootstrap.com/docs/5.2/assets/img/favicons/apple-touch-icon.png"
