--- a/templates/deploy.html
+++ b/templates/deploy.html
@@ -110,7 +110,7 @@
       function autoRefresh() {
         window.location = window.location.href;
       }
-      setInterval('autoRefresh()', 45000);
+      // setInterval('autoRefresh()', 1000);
   </script>
 
     
@@ -159,7 +159,7 @@
                 {% if 'revoking' in model.deployStatus %}
 
                   <div class="form-check form-switch" >
-                    <input class="form-check-input" type="checkbox" id="deployRevoke_switch_{{model.id}}" formaction="/pipeline/deploy" data-deploystatus="{{model.deployStatus}}" data-modelid="{{model.id}}"  onchange="changingStatus(this.id)">
+                    <input class="form-check-input" type="checkbox" id="deployRevoke_switch_{{model.id}}" formaction="/pipeline/deploy" data-deploystatus="{{model.deployStatus}}" data-modelid="{{model.id}}"  onchange="changingStatus(this.id)" >
 
                   </div>
 
@@ -168,7 +168,7 @@
                 {% if 'deploying' in model.deployStatus %}
 
                   <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="deployRevoke_switch_{{model.id}}" formaction="/pipeline/deploy" data-deploystatus="{{model.deployStatus}}" data-modelid="{{model.id}}" onchange="changingStatus(this.id)" checked="">
+                    <input class="form-check-input" type="checkbox" id="deployRevoke_switch_{{model.id}}" formaction="/pipeline/deploy" data-deploystatus="{{model.deployStatus}}" data-modelid="{{model.id}}" onchange="changingStatus(this.id)" checked="" >
                     <label class="form-check-label" for="deployRevoke_switch"></label>
                   </div>
 
