--- a/templates/deploy.html
+++ b/templates/deploy.html
@@ -110,7 +110,15 @@
       function autoRefresh() {
         window.location = window.location.href;
       }
-      // setInterval('autoRefresh()', 1000);
+      setInterval('autoRefresh()', 15000);
+      document.addEventListener("DOMContentLoaded", function(event) { 
+            var scrollpos = localStorage.getItem('scrollpos');
+            if (scrollpos) window.scrollTo(0, scrollpos);
+        });
+
+        window.onbeforeunload = function(e) {
+            localStorage.setItem('scrollpos', window.scrollY);
+        };
   </script>
 
     
