--- a/templates/deploy.html
+++ b/templates/deploy.html
@@ -161,13 +161,13 @@
 
               {% for model in deployRecord %}
               <tr>
-                <th scope="row">{{model.id}}</th>
+                <th scope="row">{{model.modelId}}</th>
                 <td>
 
                 {% if 'revoking' in model.deployStatus %}
 
                   <div class="form-check form-switch" >
-                    <input class="form-check-input" type="checkbox" id="deployRevoke_switch_{{model.id}}" formaction="/pipeline/deploy" data-deploystatus="{{model.deployStatus}}" data-modelid="{{model.id}}"  onchange="changingStatus(this.id)" >
+                    <input class="form-check-input" type="checkbox" id="deployRevoke_switch_{{model.modelId}}" formaction="/pipeline/deploy" data-deploystatus="{{model.deployStatus}}" data-modelid="{{model.modelId}}"  onchange="changingStatus(this.id)" >
 
                   </div>
 
@@ -176,7 +176,7 @@
                 {% if 'deploying' in model.deployStatus %}
 
                   <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="deployRevoke_switch_{{model.id}}" formaction="/pipeline/deploy" data-deploystatus="{{model.deployStatus}}" data-modelid="{{model.id}}" onchange="changingStatus(this.id)" checked="" >
+                    <input class="form-check-input" type="checkbox" id="deployRevoke_switch_{{model.modelId}}" formaction="/pipeline/deploy" data-deploystatus="{{model.deployStatus}}" data-modelid="{{model.modelId}}" onchange="changingStatus(this.id)" checked="" >
                     <label class="form-check-label" for="deployRevoke_switch"></label>
                   </div>
 
