--- a/templates/service.html
+++ b/templates/service.html
@@ -216,9 +216,9 @@
                 <text><b>Matching learning rate Lower bound : <font color="blue">{{matchingLearningRateLowerBound}}
                     </font></b></text>
                 <br>
-                <text><b>Cramming rule : <font color="blue">{{crammingingRule}}</font></b></text>
+                <text><b>Cramming rule : <font color="blue">{{crammingRule}}</font></b></text>
                 <br>
-                <text><b>Regularizing rule : <font color="blue">{{regularizingRule}}</font></b></text>
+                <text><b>Regularizing rule : <font color="blue">{{reorganizingRule}}</font></b></text>
                 <br>
                 <text><b>Regularizing times : <font color="blue">{{regularizingTimes}}</font></b></text>
                 <br>
