更新 service.html 錯誤用詞

--- a/templates/service.html
+++ b/templates/service.html
@@ -218,7 +218,7 @@
                 <br>
                 <text><b>Cramming rule : <font color="blue">{{crammingRule}}</font></b></text>
                 <br>
-                <text><b>Regularizing rule : <font color="blue">{{reorganizingRule}}</font></b></text>
+                <text><b>Reorganizing rule : <font color="blue">{{reorganizingRule}}</font></b></text>
                 <br>
                 <text><b>Regularizing times : <font color="blue">{{regularizingTimes}}</font></b></text>
                 <br>
