--- a/templates/model_scenario_ASLFN.html
+++ b/templates/model_scenario_ASLFN.html
@@ -141,9 +141,12 @@
 
       <div class="p-5 mb-1 bg-light rounded-5">
         <div class="container-fluid py-0">
-          <h1 class="display-6 fw-bold">Model Pipeline</h1>
-          <p class="col-md-8 fs-5">Define your own ASLFN and train.</p>
+          <h1 class="display-6 fw-bold">ASLFN</h1>
+          <p class="col-md-8 fs-5">Customize your own ASLFN</p>
+          <p class="col-md-8 fs-6">Customize your own ASLFN</p>
           <br><br>
+
+          
 
 
           <form method="post" enctype="multipart/form-data">
