--- a/templates/model.html
+++ b/templates/model.html
@@ -98,7 +98,7 @@
     <div class="p-5 mb-4 bg-light rounded-3">
       <div class="container-fluid py-5">
         <h1 class="display-5 fw-bold">Model Pipeline</h1>
-        <p class="col-md-8 fs-4">Choose a Scenario.</p>
+        <!-- <p class="col-md-8 fs-4">Customize your SLFN</p> -->
       </div>
     </div>
 
@@ -106,7 +106,7 @@
       <div class="col-md-6">
         <div class="h-100 p-5 text-white bg-dark rounded-3">
           <h2>SLFN</h2>
-          <p>Define your own SLFN and train.</p>
+          <p>Customize your own SLFN</p>
           <button class="btn btn-outline-light" type="button" onclick="window.location.href='/pipeline/model/scenario/SLFN';">Try it!</button>
           
           
@@ -115,7 +115,7 @@
       <div class="col-md-6">
         <div class="h-100 p-5 bg-light border rounded-3">
           <h2>ASLFN</h2>
-          <p>Define your own ASLFN and train.</p>
+          <p>Customize your own ASLFN</p>
           <button class="btn btn-outline-secondary" type="button" onclick="window.location.href='/pipeline/model/scenario/ASLFN';">Try it!</button>
         </div>
       </div>
